# VIRTUAL-MOSUE-USING-HAND-GESTURES

./: Makefile  README.md  environment.yml  pyproject.toml
models/: Mouse.py  util.py
