[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Virtual Mouse"
version = "0.0.2"
description = "Tracks health using smartwatch data and controls a virtual mouse using hand gestures"
authors = [
  { name = "Aniket" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
requires-python = "~=3.12"
dependencies = [
    "opencv-python",
    "mediapipe",
    "autopy",
    "numpy",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
select = ["E", "F", "W", "B"]
ignore = ["E501"]
exclude = ["venv", "dist", "build", ".git", "__pycache__"]

[tool.ruff.lint.isort]
known_first_party = ["health_tracker", "virtual_mouse"]
force_sort_within_sections = true
